feat : Java11 対応をリバート (#5)
This reverts commit 2bdcad1a77bce284262d4860239db578bc6c17f9.